--- a/src/index.html
+++ b/src/index.html
@@ -5,34 +5,33 @@
     <title>JobSimulator.Dev</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="script.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   </head>
 
   <body>
     <!-- Navbar -->
+    <!-- TODO: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
     <nav class="top">
       <div class="bar blue card left-align large">
         <a
           class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
           href="javascript:void(0);"
+          id="hamburger-button"
           onclick="toggleNav()"
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <a href="#header" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a href="#challenges" class="bar-item button hide-small padding-large hover-white">Browse Challenges</a>
-        <a href="#signup" class="bar-item button hide-small padding-large hover-white">Sign Up</a>
+        <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
+        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
+        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
+        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
-      <div id="navDemo" class="bar-block white hide hide-large hide-medium large">
-        <a href="#challenges" class="bar-item button padding-large">Browse Challenges</a>
-        <a href="#signup" class="bar-item button padding-large">Sign Up</a>
+      <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
+        <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
+        <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
       </div>
     </nav>
 
