--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
         <a id="nav-logo" class="bar-item button padding-large white" href="#header">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white" href="#challenges">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white" href="#signup">Sign Up</a>
+        <a id="nav-challenges" class="bar-item button hide-small padding-large hover-white" href="#challenges">Browse Challenges</a>
+        <a id="nav-signup" class="bar-item button hide-small padding-large hover-white" href="#signup">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
