--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 
     <!-- Header -->
     <header id="header" class="container white center" style="padding: 128px 16px">
-      <img id="jumbo-image" src="./banner-image.png" />
+      <img id="jumbo-image" src="./banner-image.png" style="filter: invert(1)" />
       <h1 class="margin jumbo">Want to test your software dev skills?</h1>
       <a href="#signup" class="button blue padding-large large margin-top">Sign Up</a>
     </header>
