--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <nav class="top">
             <div class="bar blue card left-align large">
                 <a
-                    class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
+                    class="bar-item button hide-large right padding-large hover-white large blue"
                     href="javascript:void(0);"
                     id="hamburger-button"
                     onclick="toggleNav()"
@@ -26,16 +26,20 @@
                 ></a>
                 <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
                 <a id="nav-logo" href="#header" class="bar-item button padding-large white">JobSimulator.Dev</a>
-                <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hover-white"
+                <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hover-white hide-medium"
                     >Browse Challenges</a
                 >
-                <a id="nav-signup" href="#signup" class="bar-item button padding-large hover-white">Sign Up</a>
+                <a id="nav-signup" href="#signup" class="bar-item button padding-large hover-white hide-medium"
+                    >Sign Up</a
+                >
             </div>
 
             <!-- Navbar on small screens -->
-            <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-                <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
-                <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
+            <div id="mobile-nav" class="bar-block white hide hide-large large">
+                <a id="mobile-nav-challenges" href="#challenges" class="bar-item button padding-large"
+                    >Browse Challenges</a
+                >
+                <a id="mobile-nav-signup" href="#signup" class="bar-item button padding-large">Sign Up</a>
             </div>
         </nav>
 
