--- a/src/index.html
+++ b/src/index.html
@@ -11,27 +11,25 @@
 
   <body>
     <!-- Navbar -->
-    <!-- TODO: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
     <nav class="top">
       <div class="bar blue card left-align large">
         <a
-          class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
+          class="bar-item mobile button hide-medium hide-large right padding-large hover-white large blue"
           href="javascript:void(0);"
           id="hamburger-button"
           onclick="toggleNav()"
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-logo" href="#" class="hide-small bar-item button padding-large white">JobSimulator.Dev</a>
+        <a id="nav-challenges" href="#challenges" class="hide-small bar-item button padding-large hover-white">Browse Challenges</a>
+        <a id="nav-signup" href="#signup" class="hide-small bar-item button padding-large hover-white">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
-      <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
-        <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
+      <div id="mobile-nav" href="#" class="mobile bar-block white hide hide-large hide-medium large">
+        <a id="mobile-nav-challenges" href="#challenges" class="mobile bar-item button padding-large">Browse Challenges</a>
+        <a id="mobile-nav-signup" href="#signup" class="mobile bar-item button padding-large">Sign Up</a>
       </div>
     </nav>
 
