--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
     <nav class="top">
       <div class="bar blue card left-align large">
         <a
-          class="bar-item mobile button hide-medium hide-large right padding-large hover-white large blue"
+          class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
           href="javascript:void(0);"
           id="hamburger-button"
           onclick="toggleNav()"
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <a id="nav-logo" href="#" class="hide-small bar-item button padding-large white">JobSimulator.Dev</a>
+        <a id="nav-logo" href="#" class="bar-item button padding-large white">JobSimulator.Dev</a>
         <a id="nav-challenges" href="#challenges" class="hide-small bar-item button padding-large hover-white">Browse Challenges</a>
         <a id="nav-signup" href="#signup" class="hide-small bar-item button padding-large hover-white">Sign Up</a>
       </div>
