--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
       </div>
 
       <!-- Navbar on small screens -->
-      <div id="mobile-nav" href="#" class="mobile bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" href="#challenges" class="mobile bar-item button padding-large">Browse Challenges</a>
-        <a id="mobile-nav-signup" href="#signup" class="mobile bar-item button padding-large">Sign Up</a>
+      <div id="mobile-nav" href="#" class="bar-block white hide hide-large hide-medium large">
+        <a id="mobile-nav-challenges" href="#challenges" class="bar-item button padding-large">Browse Challenges</a>
+        <a id="mobile-nav-signup" href="#signup" class="bar-item button padding-large">Sign Up</a>
       </div>
     </nav>
 
