--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <a id="nav-logo" href="#" class="bar-item button padding-large white">JobSimulator.Dev</a>
+        <a id="nav-logo" href="#header" class="bar-item button padding-large white">JobSimulator.Dev</a>
         <a id="nav-challenges" href="#challenges" class="hide-small bar-item button padding-large hover-white">Browse Challenges</a>
         <a id="nav-signup" href="#signup" class="hide-small bar-item button padding-large hover-white">Sign Up</a>
       </div>
