--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <nav class="top">
       <div class="bar blue card left-align large">
         <a
-          class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
+          class="bar-item button hide-large right padding-large hover-white large blue"
           href="javascript:void(0);"
           id="hamburger-button"
           onclick="toggleNav()"
@@ -23,14 +23,14 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-logo" href="#top" class="bar-item button padding-large white">JobSimulator.Dev</a>
+        <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hover-white hide-medium">Browse Challenges</a>
+        <a id="nav-signup" href="#signup" class="bar-item button padding-large hover-white hide-medium">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
+        <a id="mobile-nav-challenges" class="bar-item button padding-large show">Browse Challenges</a>
         <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
       </div>
     </nav>
