--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,14 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" href="#top" class="bar-item button padding-large white">JobSimulator.Dev</a>
+        <a id="nav-logo" href="#header" class="bar-item button padding-large white">JobSimulator.Dev</a>
         <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hover-white hide-medium">Browse Challenges</a>
         <a id="nav-signup" href="#signup" class="bar-item button padding-large hover-white hide-medium">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="bar-item button padding-large show">Browse Challenges</a>
+        <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
         <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
       </div>
     </nav>
