--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-logo" class="bar-item button padding-large white" href="#header">JobSimulator.Dev</a>
+        <a id="nav-challenges" class="bar-item button padding-large hover-white" href="#browse">Browse Challenges</a>
+        <a id="nav-signup" class="bar-item button padding-large hover-white" href="#signup">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
@@ -42,7 +42,7 @@
       <a href="#signup" class="button blue padding-large large margin-top">Sign Up</a>
     </header>
 
-    <section id="challenges" class="row-padding pink padding-256 container">
+    <section id="browse" class="row-padding pink padding-256 container">
       <div class="content">
         <h1>Browse Our Challenges</h1>
         <div id="challenge-grid">
