Fixed email validation and desktop nav

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,11 @@
 			class="container white center"
 			style="padding: 128px 16px"
 		>
-			<img id="jumbo-image" src="./banner-image.png" />
+			<img
+				id="jumbo-image"
+				src="./banner-image.png"
+				alt="Person using a computer"
+			/>
 			<h1 class="margin jumbo">Want to test your software dev skills?</h1>
 			<a href="#signup" class="button blue padding-large large margin-top"
 				>Sign Up</a
@@ -128,7 +132,12 @@
 						<span id="empty-error-message" class="error-message" hidden="true"
 							>Error: Email Address Empty.</span
 						>
-						<input id="email" type="email" placeholder="Enter your email" />
+						<input
+							id="email"
+							type="email"
+							placeholder="Enter your email"
+							aria-label="Email Address"
+						/>
 						<button>Submit</button>
 					</form>
 				</div>
