removed styling add classes

--- a/src/index.html
+++ b/src/index.html
@@ -39,13 +39,13 @@
 				<a
 					id="nav-challenges"
 					href="#challenges"
-					class="bar-item button padding-large hover-white"
+					class="hide-small bar-item button padding-large hover-white"
 					>Browse Challenges</a
 				>
 				<a
 					id="nav-signup"
 					href="#signup"
-					class="bar-item button padding-large hover-white"
+					class="hide-small bar-item button padding-large hover-white"
 					>Sign Up</a
 				>
 			</div>
