--- a/src/index.html
+++ b/src/index.html
@@ -23,15 +23,15 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white " onclick="window.location.hash='header'">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button hide-small padding-large hover-white "  onclick="window.location.hash='challenges'">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button hide-small padding-large hover-white " onclick="window.location.hash='signup'">Sign Up</a>
+        <a id="nav-logo" class="bar-item button padding-large white " href='#header'>JobSimulator.Dev</a>
+        <a id="nav-challenges" class="bar-item button hide-small padding-large hover-white "  href='#challenges'>Browse Challenges</a>
+        <a id="nav-signup" class="bar-item button hide-small padding-large hover-white " href='#signup'>Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="bar-block white hide hide-large  large" >
-        <a id="mobile-nav-challenges" class="bar-item button padding-large" onclick="window.location.hash='challenges'">Browse Challenges</a>
-        <a id="mobile-nav-signup" class="bar-item button padding-large" onclick="window.location.hash='signup'">Sign Up</a>
+        <a id="mobile-nav-challenges" class="bar-item button padding-large" href='#challenges'>Browse Challenges</a>
+        <a id="mobile-nav-signup" class="bar-item button padding-large" href='#signup'>Sign Up</a>
       </div>
     </nav>
 
