--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,6 @@
 
   <body>
     <!-- Navbar -->
-    <!-- TODO: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
     <nav class="top">
       <div class="bar blue card left-align large">
         <a
@@ -28,7 +27,6 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
         <a
           href="#header"
           id="nav-logo"
@@ -38,13 +36,13 @@
         <a
           href="#challenges"
           id="nav-challenges"
-          class="bar-item button padding-large hover-white"
+          class="bar-item button padding-large hover-white hide-small"
           >Browse Challenges</a
         >
         <a
           href="#signup"
           id="nav-signup"
-          class="bar-item button padding-large hover-white"
+          class="bar-item button padding-large hover-white hide-small"
           >Sign Up</a
         >
       </div>
