--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <!-- Navbar -->
-    <!-- TODO: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
+    <!-- DONE: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
     <nav class="top">
       <div class="bar blue card left-align large">
         <a
@@ -22,10 +22,10 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
+        <!-- DONE: Fix Issue, Desktop Nav Is Visible on Mobile -->
         <a id="nav-logo" class="bar-item button padding-large white" href="#top">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white" href="#challenges">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white" href="#signup">Sign Up</a>
+        <a id="nav-challenges" class="bar-item button padding-large hover-white hide-small" href="#challenges">Browse Challenges</a>
+        <a id="nav-signup" class="bar-item button padding-large hover-white hide-small" href="#signup">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
