--- a/src/index.html
+++ b/src/index.html
@@ -18,26 +18,26 @@
           class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
           href="javascript:void(0);"
           id="hamburger-button"
-          onclick="toggleNav()"
+          onclick=toggleNav();
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-logo" class="bar-item button padding-large hover-white" href="#header">JobSimulator.Dev</a>
+        <a id="nav-challenges" class="bar-item button hide-small padding-large hover-white" href="#challenges">Browse Challenges</a>
+        <a id="nav-signup" class="bar-item button hide-small padding-large hover-white" href="#signup">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
-        <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
+        <a id="mobile-nav-challenges" class="bar-item button padding-large" href="#challenges">Browse Challenges</a>
+        <a id="mobile-nav-signup" class="bar-item button padding-large" href="#signup">Sign Up</a>
       </div>
     </nav>
 
     <!-- Header -->
     <header id="header" class="container white center" style="padding: 128px 16px">
-      <img id="jumbo-image" src="./banner-image.png" />
+      <img id="jumbo-image" src="./banner-image.png" alt="banner"/>
       <h1 class="margin jumbo">Want to test your software dev skills?</h1>
       <a href="#signup" class="button blue padding-large large margin-top">Sign Up</a>
     </header>
@@ -70,9 +70,9 @@
         <div id="signup-form">
           <h1>Sign Up & Get Started</h1>
           <form>
-            <span id="success-message" class="success-message" hidden="true">Success!</span>
-            <span id="taken-error-message" class="error-message" hidden="true">Error: Email Already Taken</span>
-            <span id="empty-error-message" class="error-message" hidden="true">Error: Email Address Empty.</span>
+            <span id="success-message" class="success-message" hidden="hidden">Success!</span>
+            <span id="taken-error-message" class="error-message" hidden="hidden">Error: Email Already Taken</span>
+            <span id="empty-error-message" class="error-message" hidden="hidden">Error: Email Address Empty.</span>
             <input id="email" type="email" placeholder="Enter your email" />
             <button>Submit</button>
           </form>
