--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- DONE: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white" href="#top">JobSimulator.Dev</a>
+        <a id="nav-logo" class="bar-item button padding-large white" href="#header">JobSimulator.Dev</a>
         <a id="nav-challenges" class="bar-item button padding-large hover-white hide-small" href="#challenges">Browse Challenges</a>
         <a id="nav-signup" class="bar-item button padding-large hover-white hide-small" href="#signup">Sign Up</a>
       </div>
