--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
   </head>
 
   <body>
