--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,9 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
         <a id="nav-logo" class="bar-item button padding-large white" href="#">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white" href="#challenges">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white" href="#signup">Sign Up</a>
+        <a id="nav-challenges" class="bar-item button padding-large hover-white hide-small" href="#challenges">Browse Challenges</a>
+        <a id="nav-signup" class="bar-item button padding-large hover-white hide-small" href="#signup">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
