fix(#1): Expected value to be strictly equal to '#header' instead of '#'

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <a id="nav-logo" class="bar-item button padding-large white" href="#">JobSimulator.Dev</a>
+        <a id="nav-logo" class="bar-item button padding-large white" href="#header">JobSimulator.Dev</a>
         <a id="nav-challenges" class="bar-item button padding-large hover-white hide-small" href="#challenges">Browse Challenges</a>
         <a id="nav-signup" class="bar-item button padding-large hover-white hide-small" href="#signup">Sign Up</a>
       </div>
