fixed typo moving hide-small into class for #nav-signup

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
         <a id="nav-logo" href="#header" class="bar-item button padding-large white">JobSimulator.Dev</a>
         <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hover-white hide-small">Browse Challenges</a>
-        <a id="nav-signup" href="#signup hide-small" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-signup" href="#signup" class="bar-item button padding-large hover-white hide-small">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
