--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a href="#header" id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
+        <a href="#header" id="nav-logo" class="bar-item button padding-large white hide-medium">JobSimulator.Dev</a>
         <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white hide-medium" >Browse Challenges</a>
         <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white hide-medium" >Sign Up</a>
       </div>
