--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
 
   <body>
     <!-- Navbar -->
-    <!-- TODO: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
+    <!-- Done: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
     <nav class="top">
       <div class="bar blue card left-align large">
         <a
-          class="bar-item button  hide-large right padding-large hover-white large blue"
+          class="bar-item button hide-large right padding-large hover-white large blue"
           href="javascript:void(0);"
           id="hamburger-button"
           onclick="toggleNav()"
@@ -23,15 +23,15 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a href="#header" id="nav-logo" class="bar-item button padding-large white hide-medium">JobSimulator.Dev</a>
-        <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white hide-medium" >Browse Challenges</a>
-        <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white hide-medium" >Sign Up</a>
+        <a href="#header" id="nav-logo" class="bar-item button padding-large white >JobSimulator.Dev</a>
+        <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white hide-small" >Browse Challenges</a>
+        <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white hide-small" >Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="bar-block white hide hide-large large">
-        <a href="#challenges" id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
-        <a href="#signup" id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
+        <a href="#challenges" id="mobile-nav-challenges" class="bar-item button padding-large mobile">Browse Challenges</a>
+        <a href="#signup" id="mobile-nav-signup" class="bar-item button padding-large mobile">Sign Up</a>
       </div>
     </nav>
 
