--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
         <a href="#header" id="nav-logo" class="bar-item button padding-large white" >JobSimulator.Dev</a>
-        <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white hide-medium" >Browse Challenges</a>
-        <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white hide-medium" >Sign Up</a>
+        <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white hide-small" >Browse Challenges</a>
+        <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white hide-small" >Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
