Fix nav and link

--- a/src/index.html
+++ b/src/index.html
@@ -29,23 +29,24 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a href="#" id="nav-logo" class="bar-item button padding-large white"
+        <a
+          href="#header"
+          id="nav-logo"
+          class="bar-item button padding-large white"
           >JobSimulator.Dev</a
         >
-        <div class="hide-small">
-          <a
-            href="#challenges"
-            id="nav-challenges"
-            class="bar-item button padding-large hover-white"
-            >Browse Challenges</a
-          >
-          <a
-            href="#signup"
-            id="nav-signup"
-            class="bar-item button padding-large hover-white"
-            >Sign Up</a
-          >
-        </div>
+        <a
+          href="#challenges"
+          id="nav-challenges"
+          class="bar-item button padding-large hover-white hide-small"
+          >Browse Challenges</a
+        >
+        <a
+          href="#signup"
+          id="nav-signup"
+          class="bar-item button padding-large hover-white hide-small"
+          >Sign Up</a
+        >
       </div>
 
       <!-- Navbar on small screens -->
