--- a/src/index.html
+++ b/src/index.html
@@ -23,15 +23,15 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-logo" class="bar-item button padding-large white" href="index.html#header">JobSimulator.Dev</a>
+        <a id="nav-challenges" class="bar-item button padding-large hover-white" href="index.html#challenges">Browse Challenges</a>
+        <a id="nav-signup" class="bar-item button padding-large hover-white" href="index.html#signup">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
-      <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
-        <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
+      <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large" href="index.html#header">
+        <a id="mobile-nav-challenges" class="bar-item button padding-large" href="index.html#challenges">Browse Challenges</a>
+        <a id="mobile-nav-signup" class="bar-item button padding-large" href="index.html#signup">Sign Up</a>
       </div>
     </nav>
 
