--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,7 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white" href="">JobSimulator.Dev</a>
+        <a id="nav-logo" class="bar-item button padding-large white" href="./">JobSimulator.Dev</a>
         <a id="nav-challenges" class="bar-item button padding-large hover-white" href="#challenges">Browse Challenges</a>
         <a id="nav-signup" class="bar-item button padding-large hover-white" href="#signup">Sign Up</a>
       </div>
