--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
       </div>
 
       <!-- Navbar on small screens -->
-      <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="bar-item button padding-large" href="#challenges">Browse Challenges</a>
-        <a id="mobile-nav-signup" class="bar-item button padding-large" href="#signup">Sign Up</a>
+      <div id="mobile-nav" class="mobile bar-block white hide hide-large hide-medium large">
+        <a id="mobile-nav-challenges" class="mobile bar-item button padding-large" href="#challenges">Browse Challenges</a>
+        <a id="mobile-nav-signup" class="mobile bar-item button padding-large" href="#signup">Sign Up</a>
       </div>
     </nav>
 
