--- a/src/index.html
+++ b/src/index.html
@@ -22,14 +22,14 @@
           ><i class="fa fa-bars"></i
         ></a>
         <a id="nav-logo" class="bar-item button padding-large white" href="#header">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white" href="#challenges">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white" href="#signup">Sign Up</a>
+        <a id="nav-challenges" class="bar-item button padding-large hover-white hide-small" href="#challenges">Browse Challenges</a>
+        <a id="nav-signup" class="bar-item button padding-large hover-white hide-small" href="#signup">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="mobile bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="mobile bar-item button padding-large" href="#challenges">Browse Challenges</a>
-        <a id="mobile-nav-signup" class="mobile bar-item button padding-large" href="#signup">Sign Up</a>
+        <a id="mobile-nav-challenges" class="bar-item button padding-large" href="#challenges">Browse Challenges</a>
+        <a id="mobile-nav-signup" class="bar-item button padding-large" href="#signup">Sign Up</a>
       </div>
     </nav>
 
