--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="mobile bar-block white hide hide-large hide-medium large">
-        <a id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
-        <a id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
+        <a id="mobile-nav-challenges" href="#challenges" class="bar-item button padding-large">Browse Challenges</a>
+        <a id="mobile-nav-signup" href="#signup" class="bar-item button padding-large">Sign Up</a>
       </div>
     </nav>
 
