edit: update mobile nav bar

--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,13 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
+        <a id="nav-logo" href="#header" class="bar-item button padding-large white">JobSimulator.Dev</a>
         <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hide-small hover-white">Browse Challenges</a>
         <a id="nav-signup" href="#signup" class="bar-item button padding-large hide-small hover-white">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
-      <div id="mobile-nav" class="mobile bar-block white hide hide-large hide-medium large">
+      <div id="mobile-nav" href="#header" class="bar-block white hide hide-large hide-medium large">
         <a id="mobile-nav-challenges" href="#challenges" class="bar-item button padding-large">Browse Challenges</a>
         <a id="mobile-nav-signup" href="#signup" class="bar-item button padding-large">Sign Up</a>
       </div>
