nav bar is working but not on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,6 @@
   </head>
 
   <body>
-    <!-- Navbar -->
-    <!-- TODO: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
     <nav class="top">
       <div class="bar blue card left-align large">
         <a
@@ -28,14 +26,19 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white"
+        <a id="nav-logo" class="bar-item button padding-large white" href="#"
           >JobSimulator.Dev</a
         >
-        <a id="nav-challenges" class="bar-item button padding-large hover-white"
+        <a
+          id="nav-challenges"
+          class="bar-item button padding-large hover-white"
+          href="#challenges"
           >Browse Challenges</a
         >
-        <a id="nav-signup" class="bar-item button padding-large hover-white"
+        <a
+          id="nav-signup"
+          class="bar-item button padding-large hover-white"
+          href="#signup"
           >Sign Up</a
         >
       </div>
@@ -45,10 +48,16 @@
         id="mobile-nav"
         class="bar-block white hide hide-large hide-medium large"
       >
-        <a id="mobile-nav-challenges" class="bar-item button padding-large"
+        <a
+          id="mobile-nav-challenges"
+          class="bar-item button padding-large"
+          href="#challenges"
           >Browse Challenges</a
         >
-        <a id="mobile-nav-signup" class="bar-item button padding-large"
+        <a
+          id="mobile-nav-signup"
+          class="bar-item button padding-large"
+          href="#signup"
           >Sign Up</a
         >
       </div>
