--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
         >
         <a
           id="nav-challenges"
-          class="bar-item button padding-large hover-white"
+          class="bar-item button padding-large hover-white hide-small"
           href="#challenges"
           >Browse Challenges</a
         >
         <a
           id="nav-signup"
-          class="bar-item button padding-large hover-white"
+          class="bar-item button padding-large hover-white hide-small"
           href="#signup"
           >Sign Up</a
         >
