--- a/src/index.html
+++ b/src/index.html
@@ -26,19 +26,19 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <a id="nav-logo" class="bar-item button padding-large white" href="#"
+        <a href="#" id="nav-logo" class="bar-item button padding-large white"
           >JobSimulator.Dev</a
         >
         <a
+          href="#challenges"
           id="nav-challenges"
           class="bar-item button padding-large hover-white hide-small"
-          href="#challenges"
           >Browse Challenges</a
         >
         <a
+          href="#signup"
           id="nav-signup"
           class="bar-item button padding-large hover-white hide-small"
-          href="#signup"
           >Sign Up</a
         >
       </div>
