--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,10 @@
           title="Toggle Navigation Menu"
           ><i class="fa fa-bars"></i
         ></a>
-        <a href="#" id="nav-logo" class="bar-item button padding-large white"
+        <a
+          href="#header"
+          id="nav-logo"
+          class="bar-item button padding-large white"
           >JobSimulator.Dev</a
         >
         <a
