--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
           ><i class="fa fa-bars"></i
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a href="index.html#header" id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
+        <a href="index.html#challenges" id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
+        <a href="index.html#signup" id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
@@ -44,7 +44,7 @@
 
     <section id="challenges" class="row-padding pink padding-256 container">
       <div class="content">
-        <h1>Browse Our Challenges</h1>
+        <h1 class="header">Browse Our Challenges</h1>
         <div id="challenge-grid">
           <a
             class="challenge-tile"
