--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,14 @@
         ></a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
         <a href="#header" id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white hide-small">Browse Challenges</a>
+        <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white hide-small">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
       <div id="mobile-nav" class="bar-block white hide hide-large hide-medium large">
-        <a href="#challenges" id="mobile-nav-challenges" class="bar-item button padding-large hide-small">Browse Challenges</a>
-        <a href="#signup" id="mobile-nav-signup" class="bar-item button padding-large  hide-small">Sign Up</a>
+        <a href="#challenges" id="mobile-nav-challenges" class="bar-item button padding-large">Browse Challenges</a>
+        <a href="#signup" id="mobile-nav-signup" class="bar-item button padding-large">Sign Up</a>
       </div>
     </nav>
 
