Fixed it in another way to pass test

--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,19 @@
   <body>
     <!-- Navbar -->
     <nav class="top">
-      <div class="bar blue card left-align large">
-        <a
-          class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
-          href="javascript:void(0);"
-          id="hamburger-button"
-          onclick="toggleNav()"
-          title="Toggle Navigation Menu"
-          ><i class="fa fa-bars"></i
-        ></a>
-        <div class="hide-small">
+      <a
+        class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
+        href="javascript:void(0);"
+        id="hamburger-button"
+        onclick="toggleNav()"
+        title="Toggle Navigation Menu"
+        ><i class="fa fa-bars"></i
+      ></a>
+      
+      <div class="bar blue card left-align large hide-small">
           <a href="#header" id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
           <a href="#challenges" id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
           <a href="#signup" id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
-        </div>
       </div>
 
       <!-- Navbar on small screens -->
