--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,12 @@
           id="hamburger-button"
           onclick="toggleNav()"
           title="Toggle Navigation Menu"
-          ><i class="fa fa-bars"></i
-        ></a>
+          ><i class="fa fa-bars"></i>
+        </a>
         <!-- TODO: Fix Issue, Desktop Nav Is Visible on Mobile -->
-        <a id="nav-logo" class="bar-item button padding-large white">JobSimulator.Dev</a>
-        <a id="nav-challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
-        <a id="nav-signup" class="bar-item button padding-large hover-white">Sign Up</a>
+        <a id="nav-logo" href="index.html" class="bar-item button padding-large white">JobSimulator.Dev</a>
+        <a id="nav-challenges" href="#challenges" class="bar-item button padding-large hover-white">Browse Challenges</a>
+        <a id="nav-signup" href="#signup" class="bar-item button padding-large hover-white">Sign Up</a>
       </div>
 
       <!-- Navbar on small screens -->
