nav button issue resloved

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <!-- TODO: Fix Issue, Nav Buttons Don't Work (Desktop & Mobile) -->
     <nav class="top">
-      <div class="bar blue card left-align large hide-small">
+      <div class="bar blue card left-align large">
         <a
           class="bar-item button hide-medium hide-large right padding-large hover-white large blue"
           href="javascript:void(0);"
