--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
     <header id="header" class="container white center" style="padding: 128px 16px">
       <img id="jumbo-image" src="./banner-image.png" />
       <h1 class="margin jumbo">Want to test your software dev skills?</h1>
-      <a href="#signup" class="button blue padding-large large margin-top">Sign Up</a>
+      <a href="#signup" class="button blue padding-large large margin-top">Sign Up Now!</a>
     </header>
 
     <section id="challenges" class="row-padding pink padding-256 container">
